@@ -6,6 +6,7 @@ import {
   DatabaseFarmerSchema,
   DatabaseFeirinhaSchema,
   DatabaseGuildSchema,
+  DatabaseNotificationSchema,
   DatabaseProfileImagesSchema,
   DatabaseTitlesSchema,
   DatabaseUserSchema,
@@ -133,6 +134,14 @@ const feirinhaSchema = new Schema({
   [`name_en-US`]: { type: String },
 });
 
+const notificationSchema = new Schema({
+  userId: { type: String },
+  translationKey: { type: String },
+  translationValues: { type: Object },
+  createdAt: { type: Number },
+  unread: { type: Boolean },
+});
+
 export const commandsModel = model<DatabaseCommandSchema>('command', cmdSchema);
 export const guildsModel = model<DatabaseGuildSchema>('guild', guildSchema);
 export const usersModel = model<DatabaseUserSchema>('usersdb', userSchema);
@@ -142,3 +151,7 @@ export const profileImagesModel = model<DatabaseProfileImagesSchema>('images', p
 export const farmerModel = model<DatabaseFarmerSchema>('farmer', farmerSchema);
 export const titlesModel = model<DatabaseTitlesSchema>('titles', titlesSchema);
 export const feirinhaModel = model<DatabaseFeirinhaSchema>('feirinha', feirinhaSchema);
+export const notificationModel = model<DatabaseNotificationSchema>(
+  'notification',
+  notificationSchema,
+);
